fix: allow all origins with wildcard pattern to fix CORS for any Vercel URL